--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -67,12 +67,12 @@ So scale the equirectangular each pixel SSIM with a normalized area weight.
 	E_{RMSE} = w_{} \sqrt{\frac{1}{n} \sum_{i \in \Omega}((u_e^i - u_g^i)^2 + (v_e^i - v_g^i)^2)}
 \end{equation}
 
-\begin{figure}[hbt!]
-	\centering
-	\includegraphics[width=0.35\linewidth]{example-image}
-	\caption{A diagram to show what the sphere version EPE and AAE like. And the failure case of perspective image AAE and EPE. And the weight of RMSE and SSIM.}
-	\label{fig:exp:errormetric}
-\end{figure}
+%\begin{figure}[hbt!]
+%	\centering
+%	\includegraphics[width=0.35\linewidth]{example-image}
+%	\caption{A diagram to show what the sphere version EPE and AAE like. And the failure case of perspective image AAE and EPE. And the weight of RMSE and SSIM.}
+%	\label{fig:exp:errormetric}
+%\end{figure}
 
 \subsection{Comparison}
 
@@ -154,20 +154,48 @@ The error in spherical coordinate shown as \cref{fig:exp:quality}.
 \newcommand{\labeledfig}[4]{
 	\begin{tikzpicture}
 		\draw node[name=micrograph] {\includegraphics[width=#2\textwidth]{#1}}; %the image
-		\draw (micrograph.north west)  node[anchor=north west,yshift=-2,#4]{\textbf{\footnotesize{#3}}}; %image label
+		\draw (micrograph.north west)  node[anchor=north west,yshift=-2,#4]{\textbf{\tiny{#3}}}; %image label
 	\end{tikzpicture}
 }
 
 \begin{figure*}[hbt!]
 	\centering
-	\begin{tabular}{@{}c*{3}{@{\hspace{-1pt}}c}@{}}
-		\labeledfig{example-image}{0.26}{(a) $I_t$}{white} &
-		\labeledfig{example-image}{0.26}{(b) $I_{t+1}$}{black} &
-		\labeledfig{example-image}{0.26}{(c) Ground Truth}{black}
-		\\[-0.7em]
-		\labeledfig{example-image}{0.26}{(d) Our}{black} &
-		\labeledfig{example-image}{0.26}{(e) PWc-Net}{black} &
-		\labeledfig{example-image}{0.26}{(f) RAFT}{black}
+	\begin{tabular}{@{}c*{5}{@{\hspace{-9pt}}c}@{}}
+		\labeledfig{images/of_error/office_0_line_1k_0_dis_0002_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_dis_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) $DIS$}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_our_weight_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) $Our$}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) $PWCNet$}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_raft_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) $RAFT$}{white}
+		\\[-1.0em]
+		\labeledfig{images/of_error/office_0_line_1k_0_gt_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(f) GT}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_dis_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(g) $DIS\_SEPE$}{black} &
+		\labeledfig{images/of_error/office_0_line_1k_0_our_weight_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(h) $Our\_SEPE$}{black} &
+		\labeledfig{images/of_error/office_0_line_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(i) $PWCNet\_SEPE$}{black} &
+		\labeledfig{images/of_error/office_0_line_1k_0_raft_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(j) $RAFT\_SEPE$}{black}
+		\\[-0.9em]
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_0004_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) $DIS$}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_our_weight_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) $Our$}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) $PWCNet$}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) $RAFT$}{black}
+		\\[-1.0em]
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(f) GT}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(g) $DIS\_SEPE$}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_our_weight_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(h) $Our\_SEPE$}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(i) $PWCNet\_SEPE$}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(j) $RAFT\_SEPE$}{black}
+		\\[-0.9em]
+		\labeledfig{images/of_error/room_0_circ_1k_0002_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/room_0_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) $DIS$}{black} &
+		\labeledfig{images/of_error/room_0_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) $Our$}{black} &
+		\labeledfig{images/of_error/room_0_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) $PWCNet$}{black} &
+		\labeledfig{images/of_error/room_0_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) $RAFT$}{black}
+		\\[-1.0em]
+		\labeledfig{images/of_error/room_0_circ_1k_0_gt_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(f) GT}{black} &
+		\labeledfig{images/of_error/room_0_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(g) $DIS\_SEPE$}{black} &
+		\labeledfig{images/of_error/room_0_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(h) $Our\_SEPE$}{black} &
+		\labeledfig{images/of_error/room_0_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(i) $PWCNet\_SEPE$}{black} &
+		\labeledfig{images/of_error/room_0_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(j) $RAFT\_SEPE$}{black}
 	\end{tabular}
 	\caption{\label{fig:exp:compflow}
 		The optical flow result on Replica and OmniPhoto.}
@@ -175,14 +203,24 @@ The error in spherical coordinate shown as \cref{fig:exp:quality}.
 
 \begin{figure}[hbt!]
 	\centering
-	\begin{tabular}{@{}c*{3}{@{\hspace{-1pt}}c}@{}}
-	\labeledfig{example-image}{0.26}{(a) $I_t$}{white} &
-	\labeledfig{example-image}{0.26}{(b) $I_{t+1}$}{black} &
-	\labeledfig{example-image}{0.26}{(c) Ground Truth}{black}
-	\\[-0.7em]
-	\labeledfig{example-image}{0.26}{(d) Our}{black} &
-	\labeledfig{example-image}{0.26}{(e) PWc-Net}{black} &
-	\labeledfig{example-image}{0.26}{(f) RAFT}{black}
+	\begin{tabular}{@{}c*{5}{@{\hspace{-8pt}}c}@{}}
+	\labeledfig{images/of_warp/room_1_circ_1k_0_0001_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) DIS}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) Our}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) PWCNet}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) RAFT}{black}
+	\\[-1.0em]
+	\labeledfig{images/of_warp/room_1_circ_1k_0_0002_rgb_pano.jpg}{0.185}{(f) $I_{t+1}$}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(g) DIS(Warp)}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(h) Our(Warp)}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(i) PWCNet(Warp)}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(j) RAFT(Warp)}{black}
+	\\[-1.0em]
+	 &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(k) DIS(Warp)}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(l) Our(Warp)}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(m) PWCNet(Warp)}{black} &
+	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(n) RAFT(Warp)}{black}
 \end{tabular}
 	\caption{\label{fig:exp:backwardwarp}
 		The backward warp result with forward optical flow on Omniphoto dataset.}
