--- a/doc/paper_draft/sections/2-relatedworks.tex
+++ b/doc/paper_draft/sections/2-relatedworks.tex
@@ -89,33 +89,33 @@ Our method combines ERP, cubemap and icosahedron projections to incrementally es
 %Full rotation-equi\-variance can be achieved with spherical convolutions \cite{CohenGKW2018,EstevAMD2018}, but this is not necessarily desirable as videos can exploit the fixed gravity vector.
 
 
-\subsection{Panoramic Datasets}
-
-\CR{I would skip this here. We can discuss relevant datasets later on, in the experiment section.}
-
-% 360 Image dataset:
-%% Real-world
-- MatterportLayout dataset: https://github.com/ericsujw/Matterport3DLayoutAnnotation, labeled scene
-
-%% synthetic dataset (CAD dataset)
-The real word data rich and colourful, but it is very hard to estimate or measure the accurate segmentation, motion flow, etc. form the real word scene.
-
-- 360D dataset:
-- Structured3D: https://structured3d-dataset.org/, synthetic dataset,room layout estimation
-- Omnidirectional Stereo Dataset: http://cvlab.hanyang.ac.kr/project/omnistereo/
-- Realtor360: 
-- SUMO
-
-% 3D Mesh dataset:
-So the 3D dataset is commonly haired to generate the ground truth data for training or performance evaluation, such as Habitat \cite{SavvaKMZWJSLKMPB2019}.
-
-%% laser scanned
-- Stanford2D3D \cite{ArmenSZS2017}
-- Matterport3D ~\cite{ChangDFHNSSZZ2017}
-- Replica ~\cite{StrauWMCWGEMRVCYBYPYZLCBGMPSBSNGLN2019}
-- iGibson (Gibson)
-
-%% CAD dataset
-
-Meanwhile, the real word photo image is hard to estimate accurate optical flow.
- currently don't have any public panoramic optical flow dataset is available.
+%\subsection{Panoramic Datasets}
+%
+%\CR{I would skip this here. We can discuss relevant datasets later on, in the experiment section.}
+%
+%% 360 Image dataset:
+%%% Real-world
+%- MatterportLayout dataset: https://github.com/ericsujw/Matterport3DLayoutAnnotation, labeled scene
+%
+%%% synthetic dataset (CAD dataset)
+%The real word data rich and colourful, but it is very hard to estimate or measure the accurate segmentation, motion flow, etc. form the real word scene.
+%
+%- 360D dataset:
+%- Structured3D: https://structured3d-dataset.org/, synthetic dataset,room layout estimation
+%- Omnidirectional Stereo Dataset: http://cvlab.hanyang.ac.kr/project/omnistereo/
+%- Realtor360: 
+%- SUMO
+%
+%% 3D Mesh dataset:
+%So the 3D dataset is commonly haired to generate the ground truth data for training or performance evaluation, such as Habitat \cite{SavvaKMZWJSLKMPB2019}.
+%
+%%% laser scanned
+%- Stanford2D3D \cite{ArmenSZS2017}
+%- Matterport3D ~\cite{ChangDFHNSSZZ2017}
+%- Replica ~\cite{StrauWMCWGEMRVCYBYPYZLCBGMPSBSNGLN2019}
+%- iGibson (Gibson)
+%
+%%% CAD dataset
+%
+%Meanwhile, the real word photo image is hard to estimate accurate optical flow.
+% currently don't have any public panoramic optical flow dataset is available.
