update result section

--- a/doc/paper_draft/360flow.bib
+++ b/doc/paper_draft/360flow.bib
@@ -1075,6 +1075,14 @@ We propose a novel training objective that enables our convolutional neural netw
   _url       = {http://openaccess.thecvf.com/content_ECCV_2018/html/NIKOLAOS_ZIOULIS_OmniDepth_Dense_Depth_ECCV_2018_paper.html},
 }
 
+@inproceedings{shugrina2019creative,
+	title={Creative flow+ dataset},
+	author={Shugrina, Maria and Liang, Ziheng and Kar, Amlan and Li, Jiaman and Singh, Angad and Singh, Karan and Fidler, Sanja},
+	booktitle= CVPR,
+	pages={5384--5393},
+	year={2019}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: saveOrderConfig:specified;author;false;editor;false;year;true;}
